# weat-api

./: .env.docker  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Gemfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  restaurants.csv  seed.py
.github/workflows/: api.yml  ci.yml  ecr.yml  test.yml
alembic/: env.py
alembic/versions/: 1393d3c73e50_create_tags_and_tag_types_tables.py  28b82e7be236_add_unique_index_to_google_maps_place_.py  2b901ddbd606_enable_filter_by_bounds.py  6c2fc7fa317c_initial_schema.py  8b260dc851ec_add_menus_and_dishes_tables.py  8fb30e03d16b_enable_fuzzy_matching.py  9e7065ffdcb0_add_created_at_and_updated_at.py  a727fc17e462_make_category_optional_for_dish.py  b17d2f413e29_allow_multiple_menus_per_place.py  c0d3d261cbdc_generate_uuid_at_database_level.py  c5e2e6c94076_use_mapped_column.py  c5e2e6c94076_use_timezone-aware_datetime_columns.py  c618f5880466_set_default_values_for_opening_hours_.py  ffc6a30c4d3a_create_places_table.py
app/: __init__.py  config.py  constants.py  main.py  openapi.yaml  settings.py
app/controllers/: application_controller.rb
app/db/: __init__.py  uow.py
app/models/: __init__.py  associations.py  base.py  place.py  (+11 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  deploy.yml  routes.rb
db/: schema.rb  seeds.rb
scripts/: migrate_old_data_to_production.py  seed_db.sh
tests/: requirements.txt
weat_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+95 files in other folders)
